--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
   <!-- Modal content -->
     <div class="modal-content">
         <div class="modal-header">
-            <span class="close">&times;</span>
-            <h2>Modal Header</h2>
+            <div class="modal-header-content">
+                <h2>Modal Header</h2>
+                <span class="close">&times;</span>
+            </div>
         </div>
         <div class="modal-body">
             <p>Some text in the Modal Body</p>
